--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
     </section>
     <script src="node_modules/respond.js/dest/respond.min.js"></script>
     <script src="js/html5shiv.min.js"></script>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="assets/jquery.min.js"></script>
     <script src="js\plugins.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/bootstrap.min.css"></script>
   </body>
 </html>
