--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
         </div>
       </div>
     </section>
-    <script src="node_modules/respond.js/dest/respond.min.js"></script>
-    <script src="js/html5shiv.min.js"></script>
-    <script src="assets/jquery.min.js"></script>
-    <script src="js\plugins.js"></script>
-    <script src="assets/bootstrap.min.css"></script>
+    <script src="./node_modules/respond.js/dest/respond.min.js"></script>
+    <script src="./js/html5shiv.min.js"></script>
+    <script src="./assets/jquery.min.js"></script>
+    <script src="./js\plugins.js"></script>
+    <script src="./assets/bootstrap.min.css"></script>
   </body>
 </html>
