--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
     <script src="./js/html5shiv.min.js"></script>
     <script src="./assets/jquery.min.js"></script>
     <script src="./js\plugins.js"></script>
-    <script src="./assets/bootstrap.min.css"></script>
+    <script src="    https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js
+    "></script>
   </body>
 </html>
