--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap App</title>
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -356,7 +356,6 @@
     <script src="./js/html5shiv.min.js"></script>
     <script src="./assets/jquery.min.js"></script>
     <script src="./js\plugins.js"></script>
-    <script src="    https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js
-    "></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
