--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="assets1/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -347,6 +348,91 @@
                 <li>Ftp Accounts: 5</li>
               </ul>
               <button class="btn btn-danger">Order Naw</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="our-team">
+      <div class="team">
+        <div class="container text-center">
+          <h1>Meet Our Awesome Team</h1>
+          <div class="row">
+            <div class="col-lg-3 col-sm-6">
+              <div class="person">
+                <img
+                  class="img-circle img-responsive center-block"
+                  src="assets/chris.jpg"
+                  alt="person 1"
+                />
+                <h3>Sayed</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  eveniet ut natus ab quis quia?
+                </p>
+
+                <i class="fa fa-google-plus-square fa-lg"></i>
+                <i class="fa fa-youtube-square fa-lg"></i>
+                <i class="fa fa-facebook-square fa-lg"></i>
+                <i class="fa fa-twitter-square fa-lg"></i>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="person">
+                <img
+                  class="img-circle img-responsive center-block"
+                  src="assets/steve.jpg"
+                  alt="person 2"
+                />
+                <h3>Ahmed</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  eveniet ut natus ab quis quia?
+                </p>
+
+                <i class="fa fa-google-plus-square fa-lg"></i>
+                <i class="fa fa-youtube-square fa-lg"></i>
+                <i class="fa fa-facebook-square fa-lg"></i>
+                <i class="fa fa-twitter-square fa-lg"></i>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="person">
+                <img
+                  class="img-circle img-responsive center-block"
+                  src="assets/marissa.jpg"
+                  alt="person 3"
+                />
+                <h3>Nada</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  eveniet ut natus ab quis quia?
+                </p>
+
+                <i class="fa fa-google-plus-square fa-lg"></i>
+                <i class="fa fa-youtube-square fa-lg"></i>
+                <i class="fa fa-facebook-square fa-lg"></i>
+                <i class="fa fa-twitter-square fa-lg"></i>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="person">
+                <img
+                  class="img-circle img-responsive center-block"
+                  src="assets/leah.jpg"
+                  alt="person 2"
+                />
+                <h3>Hana</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  eveniet ut natus ab quis quia?
+                </p>
+
+                <i class="fa fa-google-plus-square fa-lg"></i>
+                <i class="fa fa-youtube-square fa-lg"></i>
+                <i class="fa fa-facebook-square fa-lg"></i>
+                <i class="fa fa-twitter-square fa-lg"></i>
+              </div>
             </div>
           </div>
         </div>
