--- a/index.html
+++ b/index.html
@@ -438,6 +438,61 @@
         </div>
       </div>
     </section>
+    <section class="subscribe text-center">
+      <div class="container">
+        <h2>Keep in Touch</h2>
+        <p class="lead">
+          Sign Up Newsletter Dont Worry About Spam We Hate It Too
+        </p>
+        <form class="form-inline">
+          <input
+            type="email"
+            placeholder="Enter Your emails"
+            class="form-control input-lg"
+          />
+          <button class="btn btn-danger btn-lg">
+            <i class="fa fa-edit"></i> Subscribe
+          </button>
+        </form>
+      </div>
+    </section>
+    <section class="statistics text-center">
+      <div class="data">
+        <div class="container">
+          <h2>Our Main Statistics</h2>
+          <div class="row">
+            <div class="col-lg-3 col-sm-6">
+              <div class="stats">
+                <i class="fa fa-users fa-5x"></i>
+                <p>9,550</p>
+                <span>Users</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="stats">
+                <i class="fa fa-comments fa-5x"></i>
+                <p>250,550</p>
+                <span>Comments</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="stats">
+                <i class="fa fa-suitcase fa-5x"></i>
+                <p>3,550</p>
+                <span>Project</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <div class="stats">
+                <i class="fa fa-support fa-5x"></i>
+                <p>95,550</p>
+                <span>Tickets</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./assets1/respond.js/dest/respond.min.js"></script>
     <script src="./js/html5shiv.min.js"></script>
     <script src="./assets/jquery.min.js"></script>
