add more sections

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
               <div class="stats">
                 <i class="fa fa-suitcase fa-5x"></i>
                 <p>3,550</p>
-                <span>Project</span>
+                <span>Projects</span>
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
@@ -488,6 +488,79 @@
                 <p>95,550</p>
                 <span>Tickets</span>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="our-skills">
+      <div class="container">
+        <h2 class="text-center">Our skills</h2>
+        <div class="row">
+          <div class="col-md-5">
+            <div class="skills-progress">
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-success progress-bar-striped active"
+                  role="progress-bar"
+                  aria-valuenow="90"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 90%"
+                >
+                  HTML/CSS3
+                </div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-danger progress-bar-striped active"
+                  role="progress-bar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 85%"
+                >
+                  JavaScript/ES6
+                </div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-info progress-bar-striped active"
+                  role="progress-bar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 88%"
+                >
+                  Angular
+                </div>
+              </div>
+              <div class="progress">
+                <div
+                  class="progress-bar progress-bar-warning progress-bar-striped active"
+                  role="progress-bar"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  style="width: 75%"
+                >
+                  React/Redux
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-md-offset-1">
+            <div class="skilled-info">
+              <h3>About Our Team</h3>
+              <p class="lead">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos
+                rerum dolor animi, numquam recusandae similique quisquam soluta
+                voluptatibus, consequatur exercitationem fugit, magnam enim!
+                Modi voluptatem, iure illo molestiae accusantium eum!
+              </p>
+              <button type="button" class="btn btn-primary">
+                Take with A Professional
+              </button>
             </div>
           </div>
         </div>
