add more sections

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="assets/01.jpg" alt="Photo 1" />
+          <img src="assets/01.jpg" alt="Photo 1" loading="lazy" />
           <div class="carousel-caption hidden-xs">
             <h1>Programming</h1>
             <p class="lead">
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="assets/02.jpg" alt="photo 2" />
+          <img src="assets/02.jpg" alt="photo 2" loading="lazy" />
           <div class="carousel-caption hidden-xs">
             <h1>Design</h1>
             <p class="lead">
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="assets/03.jpg" alt="photo 3" />
+          <img src="assets/03.jpg" alt="photo 3" loading="lazy" />
           <div class="carousel-caption hidden-xs">
             <h1>Code</h1>
             <p class="lead">
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="assets/04.jpg" alt="photo 4" />
+          <img src="assets/04.jpg" alt="photo 4" loading="lazy" />
           <div class="carousel-caption hidden-xs">
             <h1>Playing</h1>
             <p class="lead">
@@ -267,16 +267,16 @@
           </div>
           <ol class="carousel-indicators">
             <li data-target="#testmonialcaro" data-slide-to="0" class="active">
-              <img src="assets/avatar_01.jpg" alt="Sayed hany" />
+              <img src="assets/avatar_01.jpg" alt="Sayed hany" loading="lazy" />
             </li>
             <li data-target="#testmonialcaro" data-slide-to="1">
-              <img src="assets/avatar_02.jpg" alt="Ahmed Hany" />
+              <img src="assets/avatar_02.jpg" alt="Ahmed Hany" loading="lazy" />
             </li>
             <li data-target="#testmonialcaro" data-slide-to="2">
-              <img src="assets/avatar_03.jpg" alt="Mo Hany" />
+              <img src="assets/avatar_03.jpg" alt="Mo Hany" loading="lazy" />
             </li>
             <li data-target="#testmonialcaro" data-slide-to="3">
-              <img src="assets/avatar_04.jpg" alt="Nada" />
+              <img src="assets/avatar_04.jpg" loading="lazy" alt="Nada" />
             </li>
           </ol>
         </div>
@@ -364,6 +364,7 @@
                   class="img-circle img-responsive center-block"
                   src="assets/chris.jpg"
                   alt="person 1"
+                  loading="lazy"
                 />
                 <h3>Sayed</h3>
                 <p>
@@ -383,6 +384,7 @@
                   class="img-circle img-responsive center-block"
                   src="assets/steve.jpg"
                   alt="person 2"
+                  loading="lazy"
                 />
                 <h3>Ahmed</h3>
                 <p>
@@ -402,6 +404,7 @@
                   class="img-circle img-responsive center-block"
                   src="assets/marissa.jpg"
                   alt="person 3"
+                  loading="lazy"
                 />
                 <h3>Nada</h3>
                 <p>
@@ -421,6 +424,7 @@
                   class="img-circle img-responsive center-block"
                   src="assets/leah.jpg"
                   alt="person 2"
+                  loading="lazy"
                 />
                 <h3>Hana</h3>
                 <p>
@@ -564,6 +568,210 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="contact-us text-center">
+      <div class="fields">
+        <div class="container">
+          <div class="row">
+            <i class="fa fa-headphones fa-5x"></i>
+            <h2>Tell US Ehat You Fell</h2>
+            <p class="lead">Feel Free To Contact Us Anytime</p>
+            <form role="form">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control input-lg"
+                    placeholder="Username"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="email"
+                    class="form-control input-lg"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="number"
+                    class="form-control input-lg"
+                    placeholder="Cell Phone"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <textarea
+                    name="message"
+                    class="form-control input-lg"
+                    placeholder="Your message here"
+                  ></textarea>
+                  <button type="button" class="btn btn-danger btn-lg btn-block">
+                    Contact Us
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="our-clients">
+      <div class="container">
+        <div class="row">
+          <ul class="list-unstyled">
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/bbc.png"
+                alt="bbc"
+                class="center-block img-responsive"
+              />
+            </li>
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/cnn.png"
+                alt="cnn"
+                class="center-block img-responsive"
+              />
+            </li>
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/forbes.png"
+                alt="forbes"
+                class="center-block img-responsive"
+              />
+            </li>
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/techradar.png"
+                alt="techrader"
+                class="center-block img-responsive"
+              />
+            </li>
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/wired.png"
+                alt="wired"
+                class="center-block img-responsive"
+              />
+            </li>
+            <li class="col-md-2 col-xs-6">
+              <img
+                src="assets/our-clients/wsj.png"
+                alt="wsj"
+                class="center-block img-responsive"
+              />
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- --------------- -->
+    <section class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-sm-6">
+            <h3>SiteMap</h3>
+            <ul class="list-unstyled three-columns">
+              <li>Home</li>
+              <li>About</li>
+              <li>Company</li>
+              <li>Code</li>
+              <li>Design</li>
+              <li>Host</li>
+              <li>Solutions</li>
+              <li>Sitemap</li>
+              <li>Contact</li>
+            </ul>
+            <ul class="list-unstyled social-list">
+              <li>
+                <img src="assets/social-bookmarks/email.png" alt="email" />
+              </li>
+              <li>
+                <img
+                  src="assets/social-bookmarks/facebook.png"
+                  alt="facebook"
+                />
+              </li>
+              <li>
+                <img
+                  src="assets/social-bookmarks/gplus.png"
+                  alt="google plus"
+                />
+              </li>
+              <li>
+                <img
+                  src="assets/social-bookmarks/pinterest.png"
+                  alt="pinterest"
+                />
+              </li>
+              <li><img src="assets/social-bookmarks/rss.png" alt="rss" /></li>
+              <li>
+                <img src="assets/social-bookmarks/twitter.png" alt="twitter" />
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <h3>Lastest Articles</h3>
+            <div class="media">
+              <a href="#" class="pull-left">
+                <img
+                  src="assets/articles/01.jpg"
+                  alt="1"
+                  class="media-object"
+                />
+              </a>
+              <div class="media-body">
+                <h4 class="media-heading">Programming</h4>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
+            <div class="media">
+              <a href="#" class="pull-left">
+                <img
+                  src="assets/articles/02.jpg"
+                  alt="1"
+                  class="media-object"
+                />
+              </a>
+              <div class="media-body">
+                <h4 class="media-heading">Web Design</h4>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
+            <div class="media">
+              <a href="#" class="pull-left">
+                <img
+                  src="assets/articles/03.jpg"
+                  alt="1"
+                  class="media-object"
+                />
+              </a>
+              <div class="media-body">
+                <h4 class="media-heading">Coding</h4>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <h3>Our Awesome Work</h3>
+            <img src="assets/work/01.jpg" alt="1" class="img-thumbnail" /><img
+              src="assets/work/02.jpg"
+              alt="2"
+              class="img-thumbnail"
+            /><img src="assets/work/03.jpg" alt="3" class="img-thumbnail" /><img
+              src="assets/work/04.jpg"
+              alt="4"
+              class="img-thumbnail"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        Copyright &copy; <span id="current-year"></span> Sayed Hany
       </div>
     </section>
     <script src="./assets1/respond.js/dest/respond.min.js"></script>
