--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
           </div>
         </div>
       </div>
-      <div class="copyright">
+      <div class="copyright text-center">
         Copyright &copy; <span id="current-year"></span> Sayed Hany
       </div>
     </section>
