add more sections

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
         </div>
       </div>
       <div class="copyright text-center">
-        Copyright &copy; <span id="current-year"></span> Sayed Hany
+        Copyright &copy; <span id="current-year"></span> Sayed Hany Inc.
       </div>
     </section>
     <script src="./assets1/respond.js/dest/respond.min.js"></script>
