add more sections

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <!-- Beggining of navbar -->
@@ -71,9 +72,9 @@
     <!-- End of navbar -->
 
     <!-- Start Carousel-->
-    <div id="myslide" class="carousel slide" data-ride="carousel">
+    <div id="myslide" class="carousel slide hidden-xs" data-ride="carousel">
       <!-- Indicators -->
-      <ol class="carousel-indicators hidden-xs">
+      <ol class="carousel-indicators">
         <li data-target="#myslide" data-slide-to="0" class="active"></li>
         <li data-target="#myslide" data-slide-to="1"></li>
         <li data-target="#myslide" data-slide-to="2"></li>
