--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
+    <link rel="stylesheet" href="css/default_theme.css" />
+    <!-- <link rel="stylesheet" href="css/blue_theme.css" /> -->
   </head>
   <body>
     <!-- Beggining of navbar -->
+    <section class="option-box">
+      <div class="color-option">
+        <h4>Color option</h4>
+        <ul class="list-unstyled">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <i class="fa fa-gear fa-3x gear-check"></i>
+    </section>
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
