add loading spinner

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
       <div class="color-option">
         <h4>Color option</h4>
         <ul class="list-unstyled">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li data-value="css/default_theme.css"></li>
+          <li data-value="css/purple_theme.css"></li>
+          <li data-value="css/blue_theme.css"></li>
+          <li data-value="css/yellow_theme.css"></li>
         </ul>
       </div>
       <i class="fa fa-gear fa-3x gear-check"></i>
@@ -790,6 +789,24 @@
         Copyright &copy; <span id="current-year"></span> Sayed Hany Inc.
       </div>
     </section>
+    <!-- Start Section Loading -->
+
+    <div class="loading-overlay">
+      <div class="spinner">
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+      </div>
+    </div>
+
+    <!-- End Section Loading -->
+
+    <!-- Start Scroll To Top -->
+
+    <div id="scroll-top">
+      <i class="fa fa-chevron-up fa-3x"></i>
+    </div>
+
+    <!-- End Scroll To Top -->
     <script src="./assets1/respond.js/dest/respond.min.js"></script>
     <script src="./js/html5shiv.min.js"></script>
     <script src="./assets/jquery.min.js"></script>
