add some animation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link rel="stylesheet" href="css/default_theme.css" />
+    <link rel="stylesheet" href="css/hover-min.css" />
     <!-- <link rel="stylesheet" href="css/blue_theme.css" /> -->
   </head>
   <body>
@@ -317,7 +318,9 @@
                 <li>DataBase: 10</li>
                 <li>Ftp Accounts: 5</li>
               </ul>
-              <button class="btn btn-primary">Order Naw</button>
+              <button class="btn btn-primary hvr-float-shadow">
+                Order Naw
+              </button>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -332,7 +335,9 @@
                 <li>DataBase: 10</li>
                 <li>Ftp Accounts: 5</li>
               </ul>
-              <button class="btn btn-success">Order Naw</button>
+              <button class="btn btn-success hvr-round-corners">
+                Order Naw
+              </button>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -347,7 +352,9 @@
                 <li>DataBase: 10</li>
                 <li>Ftp Accounts: 5</li>
               </ul>
-              <button class="btn btn-info">Order Naw</button>
+              <button class="btn btn-info hvr-underline-from-right">
+                Order Naw
+              </button>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
@@ -362,7 +369,9 @@
                 <li>DataBase: 10</li>
                 <li>Ftp Accounts: 5</li>
               </ul>
-              <button class="btn btn-danger">Order Naw</button>
+              <button class="btn btn-danger hvr-curl-top-left">
+                Order Naw
+              </button>
             </div>
           </div>
         </div>
@@ -469,8 +478,8 @@
             placeholder="Enter Your emails"
             class="form-control input-lg"
           />
-          <button class="btn btn-danger btn-lg">
-            <i class="fa fa-edit"></i> Subscribe
+          <button class="btn btn-danger btn-lg hvr-icon-pulse">
+            <i class="fa fa-edit hvr-icon"></i> Subscribe
           </button>
         </form>
       </div>
@@ -577,7 +586,10 @@
                 voluptatibus, consequatur exercitationem fugit, magnam enim!
                 Modi voluptatem, iure illo molestiae accusantium eum!
               </p>
-              <button type="button" class="btn btn-primary">
+              <button
+                type="button"
+                class="btn btn-primary hvr-wobble-to-bottom-right"
+              >
                 Take with A Professional
               </button>
             </div>
@@ -623,7 +635,10 @@
                     class="form-control input-lg"
                     placeholder="Your message here"
                   ></textarea>
-                  <button type="button" class="btn btn-danger btn-lg btn-block">
+                  <button
+                    type="button"
+                    class="btn btn-danger btn-lg btn-block hvr-wobble-bottom"
+                  >
                     Contact Us
                   </button>
                 </div>
@@ -803,7 +818,7 @@
     <!-- Start Scroll To Top -->
 
     <div id="scroll-top">
-      <i class="fa fa-chevron-up fa-3x"></i>
+      <i class="fa fa-chevron-up fa-3x hvr-buzz-out"></i>
     </div>
 
     <!-- End Scroll To Top -->
