--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/media.css" />
     <link rel="stylesheet" href="css/default_theme.css" />
     <link rel="stylesheet" href="css/hover-min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <!-- <link rel="stylesheet" href="css/blue_theme.css" /> -->
   </head>
   <body>
@@ -806,12 +807,12 @@
     </section>
     <!-- Start Section Loading -->
 
-    <div class="loading-overlay">
+    <!-- <div class="loading-overlay">
       <div class="spinner">
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
-    </div>
+    </div> -->
 
     <!-- End Section Loading -->
 
@@ -825,7 +826,11 @@
     <script src="./assets1/respond.js/dest/respond.min.js"></script>
     <script src="./js/html5shiv.min.js"></script>
     <script src="./assets/jquery.min.js"></script>
-    <script src="./js\plugins.js"></script>
     <script src="./assets1/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js\plugins.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
