--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sayed <span>inc.</span></a>
+          <a class="navbar-brand" href="index.html">Sayed <span>inc.</span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,10 +57,12 @@
         >
           <ul class="nav navbar-nav">
             <li class="active">
-              <a href="#">Home <span class="sr-only">(current)</span></a>
+              <a href="index.html"
+                >Home <span class="sr-only">(current)</span></a
+              >
             </li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Company</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li class="dropdown">
               <a
                 href="#"
@@ -172,7 +174,7 @@
       </a>
     </div>
     <!-- End of Carousel-->
-    <section class="about text-center">
+    <section class="about text-center wow bounceIn" data-wow-offset="300">
       <div class="container">
         <h1 class="hidden-xs">Meet our new Template <span>Sayed Inc.</span></h1>
         <h3 class="visible-xs">
@@ -384,7 +386,7 @@
           <h1>Meet Our Awesome Team</h1>
           <div class="row">
             <div class="col-lg-3 col-sm-6">
-              <div class="person">
+              <div class="person wow bounceInUp">
                 <img
                   class="img-circle img-responsive center-block"
                   src="assets/chris.jpg"
@@ -404,7 +406,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <div class="person">
+              <div class="person wow bounceInDown">
                 <img
                   class="img-circle img-responsive center-block"
                   src="assets/steve.jpg"
@@ -424,7 +426,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <div class="person">
+              <div class="person wow bounceInUp">
                 <img
                   class="img-circle img-responsive center-block"
                   src="assets/marissa.jpg"
@@ -444,7 +446,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <div class="person">
+              <div class="person wow bounceInDown">
                 <img
                   class="img-circle img-responsive center-block"
                   src="assets/leah.jpg"
@@ -527,7 +529,7 @@
         <h2 class="text-center">Our skills</h2>
         <div class="row">
           <div class="col-md-5">
-            <div class="skills-progress">
+            <div class="skills-progress wow bounceInLeft">
               <div class="progress">
                 <div
                   class="progress-bar progress-bar-success progress-bar-striped active"
@@ -579,7 +581,7 @@
             </div>
           </div>
           <div class="col-md-6 col-md-offset-1">
-            <div class="skilled-info">
+            <div class="skilled-info wow bounceInRight">
               <h3>About Our Team</h3>
               <p class="lead">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -807,12 +809,12 @@
     </section>
     <!-- Start Section Loading -->
 
-    <!-- <div class="loading-overlay">
+    <div class="loading-overlay">
       <div class="spinner">
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
-    </div> -->
+    </div>
 
     <!-- End Section Loading -->
 
